k8s/transparent-proxy/base/istio/authorizationpolicy/allow-ingress-authorization-policy.yaml

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-transparent-proxy
spec:
  selector:
    matchLabels:
      io.kompose.service: paralog-transparent-proxy
  action: ALLOW
  rules:
    - from:
        - source:
            principals : ["PLACE_HOLDER"]
      to:
        - operation:
            methods: ["GET","POST"]
